# BiD_Indian_BT_startups

./: .gitignore  README.md  main.py  pyproject.toml
config/: api_keys.yaml  database.yaml  logging.yaml  pipeline_config.yaml  scrapping_rules.yaml
data/processed/: final_data.xlsx
data/raw/: companies_list.xlsx  company_list.xlsx
deployment/docker/: Dockerfile  docker-compose.yaml
deployment/scripts/: backup.sh
scripts/: data_quality_check.py  export_data.py  run_pipeline.py  setup_database.py
src/biotech_pipeline/: cli.py
src/biotech_pipeline/agents/: search_agent.py  validation_agent.py
src/biotech_pipeline/core/: database.py  model.py
src/biotech_pipeline/extractors/: base_extractor.py  birac_extractor.py  news_scrapper.py  web_extractor.py  website_scraper.py
src/biotech_pipeline/loaders/: postgress_loader.py
src/biotech_pipeline/pipeline/: etl_orchestrator.py  etl_pipeline.py
src/biotech_pipeline/processors/: data_cleaner.py  data_processor.py  validator.py
src/biotech_pipeline/utils/: config.py  exceptions.py  exporter.py  helpers.py  logger.py
